<resources>
    <string name="app_name">Taoke</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="no_name">请输入用户名</string>
    <string name="no_password">请输入密码</string>
    <string name="login_title">登录</string>

    <string name="login_success">登录成功。</string>
    <string name="login_fail">登录失败！请重试。</string>

    <!--版本更新-->
    <string name="version_update">版本更新</string>
    <string name="current_version">当前版本: v%1$s</string>
    <string name="no_sd_card">没有存储卡</string>
    <string name="to_update">是否更新？</string>
    <string name="cancel">取消</string>
    <string name="ensure">确认</string>
    <string name="background_download">后台下载</string>
    <string name="no_update">版本已经最新了。</string>


    <string name="unknown">未知</string>
    <string name="empty"></string>

    <string name="report_title">效果</string>
    <string name="report_sales">销量效果</string>
    <string name="report_stats">统计效果</string>
    <string name="fragment_locking_news_reloading">loading</string>
    <string name="login_owner_empty">owner为空，数据异常，请联系客服。</string>
    <string name="report_pre_price">原价:%1$s元</string>
    <string name="report_ei_price">佣金:%1$s元</string>
    <string name="report_sales_ctime">下单时间:%1$s</string>
    <string name="report_sales_stime">结算时间:%1$s</string>
    <string name="select_group">选择群：</string>
    <string name="select_sale_count">订单总量：%1$s</string>
    <string name="stats_click">点击：%1$s</string>
    <string name="stats_pay">已付款数：%1$s</string>
    <string name="stats_effect">效果：%1$s</string>
    <string name="stats_rec">预估收入：%1$s</string>
    <string name="user_message_replay">未回复</string>
    <string name="select_item_send">发送</string>
    <string name="select_item_transform">生成</string>
    <string name="select_item_price">原价：%1$s元</string>
    <string name="select_item_cprice">劵后价：%1$s元</string>
    <string name="select_item_coupon">优惠劵：%1$s元</string>
    <string name="select_item_yongj">佣金比例：%1$s%%</string>
    <string name="select_item_yongj_rate">佣金：%1$s元</string>

    <string name="select_item_send_empty_tip">没有需要发送的商品，请点击商品列加入商品。</string>

    <string name="user_msg_thread_content">消息：%1$s</string>
    <string name="user_msg_thread_time">时间：%1$s</string>

    <string name="user_msg_thread">用户消息</string>

    <string name="toast_tip_send_success">发送成功！</string>
    <string name="login_menu_exit">退出</string>
    <string name="toast_group_empty">账户下没有群，请先联系客服配置群。</string>

    <string name="trans_items">生成结果</string>
    <string name="trans_items_copy">拷贝</string>

    <string name="transforming">生成中</string>
    <string name="transform_finish">生成完成</string>
    <string name="transform_fail">生成失败</string>

    <string name="main_tab_search">数据</string>
    <string name="main_tab_basket">消息</string>
    <string name="main_tab_order">订单</string>
    <string name="main_tab_mine">我</string>
    <string name="main_tab_item">发送物品</string>
    <string name="main_tab_t">物品篮</string>
    <string name="main_tab_t_finish">生成图文</string>


</resources>
