<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="presenter"
            type="com.kunion.taoke.main.MainPresenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.kunion.taoke.widget.MyViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:flipInterval="30"
            android:layout_weight="1"
            />


        <include layout="@layout/layout_common_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/icons">

            <TextView
                android:id="@+id/main_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/main_tab_search"
                android:textSize="14sp"
                android:textColor="@drawable/recommend_price_sort_text_selector"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:drawableTop="@drawable/maintab_stats_selector"
                android:paddingTop="5dp"
                android:onClick="@{(view)-> presenter.switchPage(view, 0)}"
                />

            <TextView
                android:id="@+id/main_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/main_tab_t"
                android:textSize="14sp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textColor="@drawable/recommend_price_sort_text_selector"
                android:orientation="vertical"
                android:drawableTop="@drawable/maintab_message_selector"
                android:paddingTop="5dp"
                android:onClick="@{(view)-> presenter.switchPage(view, 1)}"/>

            <TextView
                android:id="@+id/main_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/main_tab_t_finish"
                android:textSize="14sp"
                android:textColor="@drawable/recommend_price_sort_text_selector"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:drawableTop="@drawable/maintab_item_selector"
                android:paddingTop="5dp"
                android:onClick="@{(view)-> presenter.switchPage(view, 2)}"
                />

            <!--<TextView-->
                <!--android:id="@+id/main_mine"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1.0"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/main_tab_mine"-->
                <!--android:textSize="14sp"-->
                <!--android:textColor="@drawable/recommend_price_sort_text_selector"-->
                <!--android:layout_gravity="center"-->
                <!--android:orientation="vertical"-->
                <!--android:drawableTop="@drawable/maintab_mine_selector"-->
                <!--android:paddingTop="5dp"-->
                <!--/>-->
        </LinearLayout>



    </LinearLayout>

</layout>